--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -5,20 +5,21 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node server.js",
+    "start": "node server.js",
     "dev": "concurrently \"npm run dev:api-gateway\" \"npm run dev:user-service\" \"npm run dev:product-service\" \"npm run dev:invoice-service\"  \"npm run dev:customerCare-service\"  \"npm run dev:razerpay-service\"",
-    "dev:api-gateway" : " nodemon server.js",
-    "dev:user-service" : " cd ../micro-services/user-service && node check-and-install.js && nodemon server.js" ,
-    "dev:product-service":"cd ../micro-services/product-service && node check-and-install.js && nodemon server.js",
-    "dev:invoice-service":"cd ../micro-services/invoice-service && node check-and-install.js && nodemon server.js",
-    "dev:customerCare-service":"cd ../micro-services/customerCare-service && node check-and-install.js && nodemon server.js",
-    "dev:razerpay-service":"cd ../micro-services/razerpay-service && node check-and-install.js && nodemon server.js"
+    "dev:api-gateway": " nodemon server.js",
+    "dev:user-service": " cd ../micro-services/user-service && node check-and-install.js && nodemon server.js",
+    "dev:product-service": "cd ../micro-services/product-service && node check-and-install.js && nodemon server.js",
+    "dev:invoice-service": "cd ../micro-services/invoice-service && node check-and-install.js && nodemon server.js",
+    "dev:customerCare-service": "cd ../micro-services/customerCare-service && node check-and-install.js && nodemon server.js",
+    "dev:razerpay-service": "cd ../micro-services/razerpay-service && node check-and-install.js && nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "http-proxy-middleware": "^3.0.3"
   },
