--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -20,8 +20,10 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "http-proxy-middleware": "^3.0.3"
+    "http-proxy-middleware": "^3.0.3",
+    "mongoose": "^8.8.2"
   },
   "devDependencies": {
     "concurrently": "^9.1.0",
